refactor: red index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>SERGEY NOVIK</h1>
+    <img src="https://sun9-48.userapi.com/impg/0WVIEKiYoG9ydq2fNlURE_c8kYxixdfZ6taG5A/RA1vE9MjF8o.jpg?size=2560x1707&quality=95&sign=f6bedeab5493d3ce47f41234104d0172&type=album" alt="photo" width="300" height="200">
     <h2>Contacts</h2>
     <ul>
         <li>Location: Minsk, Belarus</li>
